fix text alignment, add margins to main

--- a/src/Main.module.css
+++ b/src/Main.module.css
@@ -2,3 +2,24 @@
     padding: 96px 32px;
     color: #545759;
 }
+
+.h2 {
+    line-height: 1.3;
+    font-size: 2.6rem;
+}
+
+.desc {
+    padding: 0 3rem;
+}
+
+.desc > *:not(:last-child) {
+    margin-bottom: 3rem;
+}
+
+.featuresList {
+    margin-top: 4rem;
+}
+
+.featuresList > * {
+    text-align: left;
+}
